fdo#62044 RTF import: don't overwrite existing styles when pasting

Change-Id: I80a83caebc8fa3f038cf2ff080c6c6ec8e93fb70